<resources>
    <string name="app_name">Eid Dhamaka</string>
    <string name="englishone">
\n
On the canvas of life, we often go off color,
but as long as people like you are there
to add the right shades,
life goes on to be a rainbow!
Eid Mubarak
\n</string>
    <string name="englishtwo">
\n
Hope Love and Laugher,
warmth, wishes, joy and
a bouquet of Eid wishes, jubilations,
become a part of your Eid and Your Life.
Have a Happy Eid Mubarak.
\n</string>
    <string name="englishthree">
\n
May the noor of this EID illuminate your heart, mind, soul and may all your prays be answered.
Remember me in your prayers.
EID MUBARAK
\n</string>
    <string name="englishfour">
\n
When the sun has set, and day is done-
I’ll break this chain, but only one.
By the end of Ramadan, this whole chain will be all gone!
It’s time for Eid and lots of fun!!!
\n</string>
    <string name="englishfive">
\n
May Allah send his Love like Sunshine in his warm and gentle ways to fill every corner of your Heart and filled your Life with a lot of Happiness like this EID DAY.
Wishing you EID MUBARAK.
\n</string>
    <string name="englishsix">
\n
On Eid ul-Fitr, wish that Allah’s blessings light up the path and lead to happiness, peace and success. Happy Eid!

\n</string>
    <string name="englishseven">
\n
May Allah accept your good deeds, forgive your transgressions and sins, and ease the suffering of all people around the globe.

\n</string>
    <string name="englisheight">
\n
May the day delight and the moments measure all the special joys for all of you to treasure. May the year ahead be fruitful too, for your home and family and especially for you. Happy Eid Mubarak To You!

\n</string>
    <string name="englishnine">
\n
Here comes the day, once in a blue moon.
With chanda mama shining up bright
And blessing everyone… Its love so tender, merciful.
Shining down on the earth wishing us
“Happy eid
\n</string>
    <string name="englishten">
\n
May the blessings of Allah fulfill your life and also your family members with happiness and open all doors of success all day long. Eid Mubarak To You!

\n</string>

    <string name="banglaone">
\n
 এই এসএমএস, যার কাছে যাবি,
যাকে পাবি, তাকেই আমার সালাম দিবি,
লাল গোলাপের ভালোবাসা দিয়ে ঈদের দাওয়াত জানাবি,
আর মিষ্টি করে বলবি ঈদ মোবারক।

\n</string>
    <string name="banglatwo">
\n
 ঈদের শুভেচ্ছা জানাই তোমাকে,
অনেক বেশি খুশি ঘিরে রাখুক তোমাকে,
সব আপনজনের মায়া মাতিয়ে রাখুক তোমাকে,
শুধু যখন সালামি পাবে মনে করিও আমাকে।

\n</string>
    <string name="banglathree">
\n
 আজ দু:খ ভুলার দিন,
আজ মন হবে যে রঙ্গিন।
আজ প্রান খুলে শুধু গান হবে,
আজ সুখ হবে সিমাহীন।
তার একটাই কারন,
আজ যে ঈদের দিন।
ঈদ মোবারাক !

\n</string>
    <string name="banglafour">
\n
 মন চাইছে কারো সাথে কথা বলি।
মন চাইছে কোন প্রিয়জনকে স্মরণ করি।
ঈদ মোবারক বলার সিদ্ধান্ত যখন নিলাম।
ভাবলাম তোমাকে দিয়েই শুরু করি ।

\n</string>
    <string name="banglafive">
\n
 ভোর হলো দুর খোল, চোখ মেলে দেখরে। রোযা শেষ রোযা শেষ, ঈদ চলে এল রে। নতুন জামা পড়ব রে, হাসি খুসি থাকব রে . ঈদ চলে এল সবার দুয়ারে। শুভেচ্ছা রয়লো সবাইকে .ঈদ মোবারক ঈদ মোবারক।
\n</string>
    <string name="banglasix">
\n
 সোনালি সকাল, রোদেলা দুপুর,
পরন্ত বিকেল, গুধোলী সন্ধা, চাদণি রাত।
সব রঙ্গে রাঙ্গিয়ে থাক
আপনার সারাটি বছর, সারাটি জীবন।

\n</string>
    <string name="banglaseven">
\n
 আসছে সবার খুশির দিন !
নতুন জামা কিনে নিন, সময় নেই
বেশি দিন|
দাওয়াত রইল অগ্রিম, আসবেন কিন্তু
ঈদের দিন, অপেক্ষায়
থাকবো সারাদিন..

\n</string>
    <string name="banglaeight">
\n
 রং লাগছে মনে,
মধুর এই ক্ষনে,
তোমায় আমি রাঙিয়ে দেব,
ঈদের দিনে।
ঈদ মোবারক

\n</string>
    <string name="banglanine">
\n
 ফুলে ফুলে সাজিয়ে রেখেছি এই মন ।
তুমি আসলে দুজনে মিলে আনন্দ করবো সারাক্ষণ ।
বন্ধু তুমি আসবে বলে দরজায় থাকি দরিয়ে ।
ঈদ মোবারক , শুভ হোক তোমার ঈদের দিন ।

\n</string>
    <string name="banglaten">
\n
 চিঠি দিয়ে নয় "ফুল দিয়ে নয়"
কার্ড দিয়ে নয় "কল দিয়ে নয়"
মনের গহীন থেকে মিষ্টি SmS দিয়ে
জানাই সবাই কে "অগ্রিম ঈদের শুভেচছা"
ঈদ মোবারক।

\n</string>
</resources>
