<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eidbackground"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="ingeniumbd.com.eidwish.EnglishSms">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishone"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishtwo"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishthree"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishfour"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishfive"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishsix"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishseven"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englisheight"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishnine"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#901d2330">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:padding="10dp"
                        android:textIsSelectable="true"
                        android:text="@string/englishten"/>
                </android.support.v7.widget.CardView>


            </LinearLayout>


    </ScrollView>
</LinearLayout>
